tests/baselines/reference/collisionExportsRequireAndEnum.errors.txt
collisionExportsRequireAndEnum_externalmodule.ts(1,13): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
collisionExportsRequireAndEnum_externalmodule.ts(5,13): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
collisionExportsRequireAndEnum_externalmodule.ts(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndEnum_externalmodule.ts(19,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndEnum_globalFile.ts(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndEnum_globalFile.ts(19,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== collisionExportsRequireAndEnum_externalmodule.ts (4 errors) ====
    export enum require { // Error
                ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
        _thisVal1,
        _thisVal2,
    }
    export enum exports { // Error
                ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
        _thisVal1,
        _thisVal2,
    }
    module m1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum require { 
            _thisVal1,
            _thisVal2,
        }
        export enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    
==== collisionExportsRequireAndEnum_globalFile.ts (2 errors) ====
    enum require {
        _thisVal1,
        _thisVal2,
    }
    enum exports {
        _thisVal1,
        _thisVal2,
    }
    module m3 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    module m4 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum require {
            _thisVal1,
            _thisVal2,
        }
        export enum exports {
            _thisVal1,
            _thisVal2,
        }
    }